2016-02-20  James Youngman  <jay@gnu.org>

	Avoid bash-specific [[...]].
	* build-aux/check-googletest-files.sh (findproblems): Avoid
	[[...]] since that is a Bash feature, and this is a /bin/sh
	script.

	Add a menu for "admin", correcting a Texinfo build failure.
	* docs/cssc.texi: Updated copyright years.
	(admin): Added a menu for the sections relating to "admin".

2016-02-09  James Youngman  <jay@gnu.org>

	* src/sf-prs.cc (print_seq_list): Use a range-based for loop for
	iterating over sequence numbers.
	* src/sf-val.cc (validate_seq_lists): Factor out the repeated
	logic into a local function, validate_seq_numbers.
	* src/sf-get2.cc (get): Use a range-based for loop for iterating
	over the comments.

2016-02-08  James Youngman  <jay@gnu.org>

	Don't gratuitously count elements of mylist<T>.
	* src/sf-admin.cc (create): Prefer !mylist<T>::empty() over
	mylist<T>::length() != 0.

	Use range-based for in get.cc.
	* src/get.cc (print_id_list): Use a range-based for loop to print
	a sid list.

	Use range-based for loops in the release_list implementation.
	* src/rel_list.cc (member): Search with std::find, rather
	than coding it manually.
	(print): Use a range-based for loop.

	Use mylist<T>::size() in preference to .length().
	* src/sf-get.cc (prepare_seqstate_1): Use the size() method of
	mylist, instead of length(), for better std::vector
	compatibility.

	Use range-based for loops in print_seqs and sccs_file::write.
	* src/sf-write.cc (print_seqs): Iterate over sequence numbers with
	a range-based for loop.
	(sccs_file::write): Iterate over users with a range-based for loop.
	(sccs_file::write): Iterate over comments with a range-based for
	loop.

	Support and used range-based for for release_list instances.
	* src/rl-merge.cc (merge): Use a range-based for loop to iterate
	over release_list instances.
	(remove): Likewise.
	* src/rel_list.h (release_list): Implement begin() and end() and
	empty().

	Use a range-based for loop for iterating over deltas.